welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: value update is not a member of Boolean
	{if (estSurMessage()=true)
             ^BDRBuggle:5: error: not found: value lit
	if (lit message = "R") {droite() ; avance() }}} 
            ^