welcome.lessons.welcome.bdr.BDR.scala.code
var fini : Boolean = false
while (fini != true )
	{if (estSurMessage()=true)
	{ litMessage()
	if (lit message = "R") {droite() ; avance() }}}